--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_h5">H5Activity</string>
+    <string name="selfview">自定义控件绘制过程</string>
 </resources>
